fixed package.json syntax error

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "keywords": [
     "csv",
-    "parser",
-    "sync"
+    "parser"
   ],
   "author": "Olivier Lalonde <olalonde@gmail.com>",
   "license": "BSD"
